# web-based-rust-sand-sim

./: Cargo.toml  index.html  index.js  package-lock.json  readme.md
src/: element.rs  element_type.rs  lib.rs
