[package]
name = "web-based-rust-sandsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8.5"
getrandom = { version = "0.2.14", features = ["js"] }
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "console"]}

[lib]
crate-type = ["cdylib", "rlib"]
